[Update] remove unused do comment

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ pluginManagement {
 //        mavenCentral()
 //    }
 //}
-rootProject.name = "template" // TODO: Update your project name
+rootProject.name = "template"
 include ':app'
